--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 asttokens==3.0.0
+certifi==2025.4.26
+charset-normalizer==3.4.2
 colorama==0.4.6
 comm==0.2.2
 debugpy==1.8.14
 decorator==5.2.1
 executing==2.2.0
+idna==3.10
 ipykernel==6.29.5
 ipython==9.2.0
 ipython_pygments_lexers==1.1.1
@@ -25,9 +28,11 @@ python-dateutil==2.9.0.post0
 pytz==2025.2
 pywin32==310
 pyzmq==26.4.0
+requests==2.32.3
 six==1.17.0
 stack-data==0.6.3
 tornado==6.4.2
 traitlets==5.14.3
 tzdata==2025.2
+urllib3==2.4.0
 wcwidth==0.2.13
